--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="sr" ng-app="AngularApp">
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-		<title>Clariness Frontend Task</title>
+		<title>AngularApp Example</title>
 		<script src="lib/angular/angular.min.js"></script>
 		<script src="lib/angular/angular-animate.min.js"></script>
 
